--- a/persistence.ipynb
+++ b/persistence.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,8 +194,8 @@
     "        raise Exception(\"Index bound must be positive\")\n",
     "        \n",
     "    for i in range(n):\n",
-    "        if column[i]==1:\n",
-    "            j=i\n",
+    "         if column[i]==1:\n",
+    "            low=i\n",
     "    return low\n",
     "\n",
     "\n",
@@ -203,13 +203,15 @@
     "def compute_persistence(matrix):\n",
     "    n,m = matrix.shape\n",
     "    last_ones = {}\n",
-    "\n",
     "    for j in range(m):\n",
-    "        low = get_lower_one_index(matrix[:,j],index)\n",
+    "        low = get_lower_one_index(matrix[:,j])\n",
     "        if low != -1:\n",
     "            while(low in last_ones.keys()):\n",
     "                matrix[:,j] =  (matrix[:,j]+matrix[:,last_ones[low]])%2\n",
     "                low = get_lower_one_index(matrix[:,j],low)\n",
+    "            if low  !=-1:\n",
+    "                last_ones[low] = j\n",
+    "\n",
     "\n",
     "    return last_ones    \n",
     "                \n",
@@ -218,12 +220,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{5: 0, 4: 1, 3: 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "m1 = np.array([[1,0,0,1],[0,0,1,1],[1,0,1,0],[0,1,0,1],[0,1,1,0],[1,1,0,0]])\n",
+    "print(compute_persistence(m1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m1 = np.array([[1,0,0,1],[0,0,1,1],[]])"
+    "def get_subcomplex(st, a, func=lambda x:x):\n",
+    "    subcomplex = [simplex for simplex in st if np.all(func(np.array(simplex))<=a) ]\n",
+    "    return subcomplex"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1]]"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def create_filtration(st,A): # st is the simplex trie, A\\subset R is the poset of values \n",
+    "    K = []\n",
+    "    for a in A:\n",
+    "        K_a = get_subcomplex(st,a, lambda x:x)\n",
+    "        K.append(K_a)\n",
+    "    return K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1],\n",
+       " [2],\n",
+       " [4],\n",
+       " [5],\n",
+       " [1, 2],\n",
+       " [1, 4],\n",
+       " [1, 5],\n",
+       " [2, 4],\n",
+       " [2, 5],\n",
+       " [4, 5],\n",
+       " [1, 2, 4],\n",
+       " [1, 2, 5],\n",
+       " [1, 4, 5],\n",
+       " [2, 4, 5],\n",
+       " [1, 2, 4, 5]]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "K = [simplex for simplex in st]\n",
+    "K.sort( key=lambda x: (len(x),x[-1]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
