Function to sort accordingly to the filtration is implemented. Function to create the boundary matrix is implemented.

--- a/persistence.ipynb
+++ b/persistence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,26 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simplex Tree with (4, 6, 4, 1) (0, 1, 2, 3)-simplices\n",
-      "[[1], [2], [4], [5], [1, 2], [1, 4], [1, 5], [2, 4], [2, 5], [4, 5], [1, 2, 4], [1, 2, 5], [1, 4, 5], [2, 4, 5], [1, 2, 4, 5]]\n",
-      "[[1], [1, 2], [1, 4], [1, 5], [2], [2, 4], [2, 5], [4], [4, 5], [5]]\n",
-      "1 (h = 3): .( 2 4 5 )..( 4 5 5 )...( 5 )\n",
-      "2 (h = 2): .( 4 5 )..( 5 )\n",
+      "Simplex Tree with (5, 4, 1) (0, 1, 2)-simplices\n",
+      "[[0], [1], [2], [4], [5], [0, 1], [0, 2], [1, 2], [1, 4], [1, 5], [4, 5], [0, 1, 2]]\n",
+      "[[0], [0, 1], [0, 2], [1], [1, 2], [1, 4], [1, 5], [2], [4], [4, 5], [5]]\n",
+      "0 (h = 2): .( 1 2 )..( 2 )\n",
+      "1 (h = 2): .( 2 4 5 )..( 5 )\n",
+      "2 (h = 0): \n",
       "4 (h = 1): .( 5 )\n",
       "5 (h = 0): \n",
-      "(last=2, depth=2): { 1 2 } \n",
-      "(last=4, depth=2): { 1 4 } { 2 4 } \n",
-      "(last=5, depth=2): { 1 5 } { 2 5 } { 4 5 } \n",
-      "(last=4, depth=3): { 1 2 4 } \n",
-      "(last=5, depth=3): { 1 2 5 } { 1 4 5 } { 2 4 5 } \n",
-      "(last=5, depth=4): { 1 2 4 5 } \n"
+      "(last=1, depth=2): { 0 1 } \n",
+      "(last=2, depth=2): { 0 2 } { 1 2 } \n",
+      "(last=4, depth=2): { 1 4 } \n",
+      "(last=5, depth=2): { 4 5 } { 1 5 } \n",
+      "(last=2, depth=3): { 0 1 2 } \n",
+      "(last=5, depth=3): { 1 4 5 } \n"
      ]
     }
    ],
@@ -109,36 +110,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1], [2], [4], [5]]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vertices = [v for v in st if len(v) == 1 ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "2"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,16 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 4, 5]"
+       "[0, 1, 2, 4, 5]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,23 +239,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1]]"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "def create_filtration(st,A): # st is the simplex trie, A\\subset R is the poset of values \n",
+    "    \"returns a list of list, each list represent a simplex\"\n",
     "    K = []\n",
     "    for a in A:\n",
     "        K_a = get_subcomplex(st,a, lambda x:x)\n",
@@ -275,37 +255,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poset_A = [1,2,3,4,5,6]\n",
+    "st = SimplexTree([[0,1,2], [0,1], [4,5], [0,1,2], [2,4], [4,5,6],[2,5], [0,6]]) \n",
+    "filtration_A = create_filtration(st, poset_A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1],\n",
-       " [2],\n",
-       " [4],\n",
-       " [5],\n",
-       " [1, 2],\n",
-       " [1, 4],\n",
-       " [1, 5],\n",
-       " [2, 4],\n",
-       " [2, 5],\n",
-       " [4, 5],\n",
-       " [1, 2, 4],\n",
-       " [1, 2, 5],\n",
-       " [1, 4, 5],\n",
-       " [2, 4, 5],\n",
-       " [1, 2, 4, 5]]"
+       "17"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "K = [simplex for simplex in st]\n",
-    "K.sort( key=lambda x: (len(x),x[-1]))\n"
+    "# Given the filtration A_1 --> A_2 --> A_3 -->...-->A_k\n",
+    "# we need to give a consistent ordering in the simplices.\n",
+    "\n",
+    "ordering = {}\n",
+    "s = 0\n",
+    "for k in range(len(filtration_A)):\n",
+    "    for j in range(len(filtration_A[k])):\n",
+    "        if tuple(filtration_A[k][j]) not in ordering.keys():\n",
+    "            ordering[tuple(filtration_A[k][j])]=s\n",
+    "            s+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 2, 3: 4, 5: 6, 7: 8, 9: 10, 12: 13, 15: 16}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_boundary_matrix(ordering,simplex):\n",
+    "    assert len(ordering) == len(simplex), \"The lenght of the ordering must coincide with the number of simplices.\"\n",
+    "\n",
+    "    n=len(simplex)\n",
+    "    b_matrix = np.zeros((n,n))\n",
+    "    for simp in simplex:\n",
+    "        if len(simp)>1:\n",
+    "            for i in range(len(simp)):\n",
+    "                y =  tuple([x for x in simp if x!= simp[i]])\n",
+    "                b_matrix[ordering[y],ordering[tuple(simp)]] = 1\n",
+    "                \n",
+    "    return b_matrix\n",
+    "\n",
+    "B_matrix_filtration_A = get_boundary_matrix(ordering, filtration_A[-1])\n",
+    "pers_A = compute_persistence(B_matrix_filtration_A)\n",
+    "pers_A\n",
+    "\n",
+    "        \n",
+    "            \n",
+    "        \n",
+    "        \n"
    ]
   },
   {
